home page overflow bug fixed

--- a/src/styles/components/_cake-baku.scss
+++ b/src/styles/components/_cake-baku.scss
@@ -122,7 +122,7 @@
   }
   &__stats {
     backdrop-filter: blur(15px);
-    width: 90px;
+    width: 100px;
     padding: 10px;
     color: #fff;
     margin-bottom: 20px;
